--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,21 @@
-.App {
-  text-align: center;
-}
+@import "~@fullcalendar/daygrid/main.css";
+@import "~@fullcalendar/core/main.css";
 
-.App-logo {
-  height: 40vmin;
+.App {
+	text-align: center;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+	background-color: #282c34;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
+	color: white;
 }
 
 .App-link {
-  color: #09d3ac;
+	color: #09d3ac;
 }
